apps/homeassistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app.kubernetes.io/name: homeassistant
    app.kubernetes.io/part-of: homeassistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        supplementalGroups: [20, 986]
      containers:
        - name: homeassistant
          # Flux Image Automation marker references ImagePolicy flux-system:homeassistant
          image: "homeassistant/home-assistant:2026.9.4" # {"$imagepolicy": "flux-system:homeassistant"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
          securityContext:
            privileged: true

          volumeMounts:
            - name: config
              mountPath: /config
            - name: zigbee-usb
              mountPath: /dev/zigbee
          
          readinessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8123
            initialDelaySeconds: 120
            periodSeconds: 15

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: homeassistant-config
        - name: zigbee-usb
          hostPath:
            path: /dev/serial/by-id/usb-1a86_USB_Serial-if00-port0
            type: CharDevice
