apps/homeassistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app.kubernetes.io/name: homeassistant
  ports:
    - name: http
      port: 80
      targetPort: 8123
      protocol: TCP
  type: ClusterIP
